disabling mailman support for now

--- a/http/mailman-docker.nginx.conf
+++ b/http/mailman-docker.nginx.conf
@@ -1,6 +1,10 @@
 server {
     server_name lists.lively-web.org;
     location / {
-        proxy_pass http://localhost:8081;
+        proxy_pass http://96.126.98.183:8080;
     }
 }
+
+# server {
+#     server_name lively-web.org;
+# }
