--- a/supervisor/supervisor.conf
+++ b/supervisor/supervisor.conf
@@ -7,11 +7,13 @@ stdout_logfile=/home/lively/lively-web.org/logs/lively.log
 stdout_logfile_maxbytes=5MB
 stdout_logfile_backups=20
 
-[program:mailman]
-command=/home/lively/lively-web.org/mailman/start.sh
-autorestart=true
-autostart=true
-redirect_stderr=true
-stdout_logfile=/home/lively/lively-web.org/logs/mailman.log
-stdout_logfile_maxbytes=1MB
-stdout_logfile_backups=10
+# [program:mailman]
+# command=/home/lively/lively-web.org/mailman/start.sh
+# autorestart=true
+# autostart=true
+# redirect_stderr=true
+# stdout_logfile=/home/lively/lively-web.org/logs/mailman.log
+# stdout_logfile_maxbytes=1MB
+# stdout_logfile_backups=10
+# stopasgroup=true
+# killasgroup=true
