--- a/http/lively.nginx.conf
+++ b/http/lively.nginx.conf
@@ -1,6 +1,6 @@
 server {
 
-    server_name localhost lively-web.org;
+    server_name localhost lively-web.org www.lively-web.org;
 
     location / {
         proxy_pass http://localhost:8080;
@@ -9,6 +9,10 @@ server {
 	proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+    }
+
+    location /cgi-bin/mailman/ {
+    	 return 301 $scheme://lists.lively-web.org$request_uri;
     }
 
 }
