put size increase

--- a/http/lively.nginx.conf
+++ b/http/lively.nginx.conf
@@ -1,6 +1,7 @@
 server {
 
     server_name localhost lively-web.org www.lively-web.org;
+    client_max_body_size 150m;
 
     location / {
         proxy_pass http://localhost:8080;
