adding internal.lively-web.org

--- a/supervisor/supervisor.conf
+++ b/supervisor/supervisor.conf
@@ -1,9 +1,22 @@
 [program:lively]
-command=/home/lively/lively-web.org/lively/start.sh
+user=lively
+directory=/home/lively/lively-web.org/lively
+command=/bin/bash --login -c './start.sh'
 autorestart=true
 autostart=true
 redirect_stderr=true
 stdout_logfile=/home/lively/lively-web.org/logs/lively.log
+stdout_logfile_maxbytes=5MB
+stdout_logfile_backups=20
+
+[program:lively-internal]
+user=lively
+directory=/home/lively/lively-web.org/internal-lively
+command=/bin/bash --login -c 'node bin/lk-server.js -p 9010 --behind-proxy'
+autorestart=true
+autostart=true
+redirect_stderr=true
+stdout_logfile=/home/lively/lively-web.org/logs/internal-lively.log
 stdout_logfile_maxbytes=5MB
 stdout_logfile_backups=20
 
