fixing home env for lively internal proc

--- a/supervisor/supervisor.conf
+++ b/supervisor/supervisor.conf
@@ -11,6 +11,7 @@ stdout_logfile_backups=20
 
 [program:lively-internal]
 user=lively
+environment=HOME="/home/lively"
 directory=/home/lively/lively-web.org/internal-lively
 command=/bin/bash --login -c 'node bin/lk-server.js -p 9010 --behind-proxy'
 autorestart=true
