--- a/http/internal.lively-web.org.nginx.conf
+++ b/http/internal.lively-web.org.nginx.conf
@@ -1,17 +1,42 @@
 server {
+
     listen        443;
-    ssl on;
     server_name internal.lively-web.org;
 
+    # upload
+    client_max_body_size 150m;
 
+    # ssl
+    ssl on;
     ssl_certificate      /home/lively/lively-web.org/http/ssl/lively-web-CA/certs/internal.crt;
     ssl_certificate_key  /home/lively/lively-web.org/http/ssl/lively-web-CA/private/internal.key;
     ssl_client_certificate /home/lively/lively-web.org/http/ssl/lively-web-CA/certs/rootCA.crt;
-
     ssl_verify_client on;
+
+    # compression
+    gzip on;
+    gzip_disable "msie6";
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_buffers 16 8k;
+    gzip_http_version 1.1;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
     location / {
         proxy_pass http://localhost:9010;
+
+        # proxy headers
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_set_header X-Forwarded-SubjectDN $ssl_client_s_dn;
+
+        # lively specific stuff:
+        # x-forwarded-user
+        # x-forwarded-email
 
         # proxy websockets:
         proxy_http_version 1.1;
