--- a/http/lively.nginx.conf
+++ b/http/lively.nginx.conf
@@ -1,19 +1,37 @@
 server {
 
     server_name localhost lively-web.org www.lively-web.org;
+
+    # upload
     client_max_body_size 150m;
+
+    # compression
+    gzip on;
+    gzip_disable "msie6";
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_buffers 16 8k;
+    gzip_http_version 1.1;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
     location / {
         proxy_pass http://localhost:8080;
 
-	# proxy websockets:
-	proxy_http_version 1.1;
+        # proxy headers
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # proxy websockets:
+        proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
     }
 
     location /cgi-bin/mailman/ {
-    	 return 301 $scheme://lists.lively-web.org$request_uri;
+        return 301 $scheme://lists.lively-web.org$request_uri;
     }
 
 }
