--- a/supervisor/supervisor.conf
+++ b/supervisor/supervisor.conf
@@ -21,6 +21,18 @@ stdout_logfile=/home/lively/lively-web.org/logs/internal-lively.log
 stdout_logfile_maxbytes=5MB
 stdout_logfile_backups=20
 
+[program:clojure]
+user=lively
+environment=HOME="/home/lively"
+directory=/home/lively/lively-web.org/clojure
+command=/bin/bash --login -c './start.sh'
+autorestart=true
+autostart=true
+redirect_stderr=true
+stdout_logfile=/home/lively/lively-web.org/logs/clojure.log
+stdout_logfile_maxbytes=5MB
+stdout_logfile_backups=20
+
 # [program:mailman]
 # command=/home/lively/lively-web.org/mailman/start.sh
 # autorestart=true
