--- a/http/internal.lively-web.org.nginx.conf
+++ b/http/internal.lively-web.org.nginx.conf
@@ -11,7 +11,7 @@ server {
     ssl_certificate      /home/lively/lively-web.org/http/ssl/lively-web-CA/certs/internal.crt;
     ssl_certificate_key  /home/lively/lively-web.org/http/ssl/lively-web-CA/private/internal.key;
     ssl_client_certificate /home/lively/lively-web.org/http/ssl/lively-web-CA/certs/rootCA.crt;
-    ssl_verify_client on;
+    ssl_verify_client optional;
 
     # compression
     gzip on;
@@ -24,25 +24,19 @@ server {
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
     location / {
+        if ($ssl_client_verify != SUCCESS) {
+            return 403;
+        }
+
         proxy_pass http://localhost:9010;
-
-        # proxy headers
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $remote_addr;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        proxy_set_header X-Forwarded-SubjectDN $ssl_client_s_dn;
-
-        # lively specific stuff:
-        # x-forwarded-user
-        # x-forwarded-email
-
-        # proxy websockets:
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        include lively-proxy.conf
     }
+
+    location ^~ /certificate-request {
+        proxy_pass http://localhost:9010;
+        include lively-proxy.conf
+    }
+
 }
 
 server {
