--- a/http/internal.lively-web.org.nginx.conf
+++ b/http/internal.lively-web.org.nginx.conf
@@ -1,46 +1,68 @@
 server {
 
-    listen        443;
-    server_name internal.lively-web.org;
+  listen 443;
+  server_name internal.lively-web.org;
 
-    # upload
-    client_max_body_size 150m;
+  # upload
+  client_max_body_size 150m;
 
-    # ssl
-    ssl on;
-    ssl_certificate      /home/lively/lively-web.org/http/ssl/lively-web-CA/certs/internal.crt;
-    ssl_certificate_key  /home/lively/lively-web.org/http/ssl/lively-web-CA/private/internal.key;
-    ssl_client_certificate /home/lively/lively-web.org/http/ssl/lively-web-CA/certs/rootCA.crt;
-    ssl_verify_client optional;
+  # ssl
+  ssl on;
+  ssl_certificate    /home/lively/lively-web.org/http/ssl/lively-web-CA/certs/internal.crt;
+  ssl_certificate_key  /home/lively/lively-web.org/http/ssl/lively-web-CA/private/internal.key;
+  ssl_client_certificate /home/lively/lively-web.org/http/ssl/lively-web-CA/certs/rootCA.crt;
+  ssl_verify_client optional;
 
-    # compression
-    gzip on;
-    gzip_disable "msie6";
-    gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_buffers 16 8k;
-    gzip_http_version 1.1;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+  # compression
+  gzip on;
+  gzip_disable "msie6";
+  gzip_vary on;
+  gzip_proxied any;
+  gzip_comp_level 6;
+  gzip_buffers 16 8k;
+  gzip_http_version 1.1;
+  gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-    location / {
-        if ($ssl_client_verify != SUCCESS) {
-            return 403;
-        }
-
-        proxy_pass http://localhost:9010;
-        include lively-proxy.conf
+  location / {
+    if ($ssl_client_verify != SUCCESS) {
+      return 403;
     }
 
-    location ^~ /certificate-request {
-        proxy_pass http://localhost:9010;
-        include lively-proxy.conf
-    }
+    proxy_pass http://localhost:9010;
+
+
+  	# proxy headers
+  	proxy_set_header Host $host;
+  	proxy_set_header X-Real-IP $remote_addr;
+  	proxy_set_header X-Forwarded-For $remote_addr;
+  	proxy_set_header X-Forwarded-Proto $scheme;
+  
+  	proxy_http_version 1.1;
+  	proxy_set_header Upgrade $http_upgrade;
+  	proxy_set_header Connection "upgrade";
+  
+  	#include lively-proxy.conf
+  }
+
+  location ^~ /certificate-request {
+    proxy_pass http://localhost:9010;
+
+  	proxy_set_header Host $host;
+  	proxy_set_header X-Real-IP $remote_addr;
+  	proxy_set_header X-Forwarded-For $remote_addr;
+  	proxy_set_header X-Forwarded-Proto $scheme;
+  
+  	proxy_http_version 1.1;
+  	proxy_set_header Upgrade $http_upgrade;
+  	proxy_set_header Connection "upgrade";
+
+    # include lively-proxy.conf
+  }
 
 }
 
 server {
-    listen         80;
-    server_name internal.lively-web.org;
-    return 301 https://$host$request_uri;
+  listen 80;
+  server_name internal.lively-web.org;
+  return 301 https://$host$request_uri;
 }
