--- a/supervisor/supervisor.conf
+++ b/supervisor/supervisor.conf
@@ -33,13 +33,25 @@ stdout_logfile=/home/lively/lively-web.org/logs/clojure.log
 stdout_logfile_maxbytes=5MB
 stdout_logfile_backups=20
 
-# [program:mailman]
-# command=/home/lively/lively-web.org/mailman/start.sh
-# autorestart=true
-# autostart=true
-# redirect_stderr=true
-# stdout_logfile=/home/lively/lively-web.org/logs/mailman.log
-# stdout_logfile_maxbytes=1MB
-# stdout_logfile_backups=10
-# stopasgroup=true
-# killasgroup=true
+[program:cloxp]
+user=lively
+environment=HOME="/home/lively"
+directory=/home/lively/lively-web.org/cloxp/
+command=/bin/bash --login -c './start.sh 9015'
+autorestart=true
+autostart=true
+redirect_stderr=true
+stdout_logfile=/home/lively/lively-web.org/logs/cloxp.log
+stdout_logfile_maxbytes=5MB
+stdout_logfile_backups=1000
+
+[program:lively-changesets]
+user=lively
+directory=/home/lively/lively-web.org/changesets
+command=/bin/bash --login -c './start.sh'
+autorestart=true
+autostart=true
+redirect_stderr=true
+stdout_logfile=/home/lively/lively-web.org/changesets/logs/lively.log
+stdout_logfile_maxbytes=5MB
+stdout_logfile_backups=10000
