--- a/http/lively-proxy.conf
+++ b/http/lively-proxy.conf
@@ -4,13 +4,14 @@ proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $remote_addr;
 proxy_set_header X-Forwarded-Proto $scheme;
 
-proxy_set_header X-Forwarded-SubjectDN $ssl_client_s_dn;
+#proxy_set_header X-Forwarded-SubjectDN $ssl_client_s_dn;
 
 # lively specific stuff:
 # x-forwarded-user
 # x-forwarded-email
 
 # proxy websockets:
+
 proxy_http_version 1.1;
 proxy_set_header Upgrade $http_upgrade;
 proxy_set_header Connection "upgrade";
