--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,25 @@
 *~
 /data/
 /logs/
+/lively/npm-debug.log
 /internal-lively/
-/http/ssl/lively-web-CA
+/http/ssl/lively-web-CA/
+/http/ssl/local-lively-CA/
+/http/ssl/lively-web-CA.bak/
+
+/cdm/repo/
+/cdm/logs/
+
+/changesets/lively-git-helper/
+/changesets/logs/
+/changesets/node-lively-davfs/
+/changesets/repo/
+
+/cloxp/cloxp
+/cloxp/clojure
+/cloxp/logs
+/cloxp/m2
+
+/dans-workspace/LivelyKernel/
+/opencv/
+/undoredo//LivelyKernel/
